# deal-harvester

./: .dockerignore  .gitignore  DEVLOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: c8934ac349bf_initial_schema_with_unique_constraint.py
docs/: DESIGN_CARD_TYPES.md
reports/: merchant_name_gaps_2026-04-24.md
scripts/: diagnose_merchant_name_gaps.py
src/card_retrieval/: __init__.py  config.py  main.py
src/card_retrieval/adapters/: __init__.py
src/card_retrieval/api/: app.py  auth.py  routes.py  schemas.py
src/card_retrieval/core/: base_adapter.py  exceptions.py  models.py  pipeline.py  registry.py
src/card_retrieval/fetchers/: browser_fetcher.py  http_fetcher.py  stealth_fetcher.py
src/card_retrieval/scheduling/: scheduler.py
src/card_retrieval/static/: index.html  operations.html
src/card_retrieval/storage/: database.py  orm_models.py  repository.py
src/card_retrieval/utils/: rate_limiter.py  text.py
tests/: conftest.py  test_api_operations.py  test_models.py  test_registry.py  test_repository.py  test_text_utils.py
tests/adapters/: test_amex_parser.py  test_bbl_parser.py  test_cardx_parser.py  test_kasikorn_parser.py  test_krungsri_parser.py  test_ktc_parser.py  test_uob_parser.py
tests/fixtures/: amex_lifestyle.html  amex_offers.html  amex_travel.html  bbl_promotions.html  cardx_api_response.json  kasikorn_promotions.html  krungsri_promotions.html  ktc_next_data.json  ktc_promotion_page.html  uob_promotions.html
(+26 files in other folders)
